<resources>
    <string name="app_name">Eccomerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_error">Connection error</string>
    <string name="error">An error occurred</string>
    <string name="invalid_credentils">invelid credientials</string>
    <string name="next">Next</string>
    <string name="onboarding_title_0">Welcome to LokMart!\nGrocery Applications</string>
    <string name="onboarding_desc_0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="onboarding_title_1">Best Quality and\\nFast Delivery!</string>
    <string name="onboarding_desc_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="fragment_onboarding_get_string">Get Started</string>
    <string name="fragment_onboarding_next">Next</string>
    <string name="fragment_sign_in_no_account">Don\'t have an account?</string>
    <string name="fragment_sign_in_sign_up">Sign up</string>
    <string name="fragment_sign_in_forgot_password"><u>Forgot Password?</u></string>
    <string name="fragmnet_sign_in_button">Sign In</string>
    <string name="fragment_sign_in_password">Password</string>
    <string name="fragment_sign_in_username">Username</string>
    <string name="fragment_sign_in_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="fragment_sign_in_title">Welcome back</string>
    <string name="fragment_sign_up_title">Create your account</string>
    <string name="fragment_sign_up_email">Email</string>
    <string name="fragmnet_sign_up_register">Register</string>

    <string name="fragment_sign_up_terms_and_privacy">By tapping Register you accept our %s and %s</string>
    <string name="termsof_use">terms of use</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="fragment_sign_up_have_account">Alredy have an account?</string>
    <string name="fragment_sign_up_sign_in">Sign in</string>
    <string name="already_registered">This email is already registered</string>
    <string name="fragment_home_search">Search...</string>
    <string name="fragment_home_good_morning">Good morning</string>
    <string name="fragment_home_categories">Categories</string>
    <string name="show_all">Show all</string>
    <string name="item_product_ratings_count">%d ratings\t\t</string>
    <string name="fragment_item_product_discount">%d%% OFF</string>
    <string name="error_loading">An error occurred</string>
    <string name="retry">Retry</string>
    <string name="fragment_home_greeting">Hello, %s</string>
    <string name="item_category_count">%d items</string>
    <string name="item_product_price">$%.1f</string>
    <string name="price_2">$%.2f</string>
    <string name="price_plus">+ $%.2f</string>
    <string name="price_minus">- $%.2f</string>
    <string name="item_product_price_striked"><strike>$%.1f</strike></string>
    <string name="Fragment_categories_title">Categories</string>
    <string name="fragment_search_recent">Recent searches</string>
    <string name="clear_all">Clear All</string>
    <string name="fragment_search_result">Search Result</string>
    <string name="fragment_filter_title">Filter Options</string>
    <string name="fragment_filter_reset">Reset</string>
    <string name="fragment_filter_rangeTitle">Sort by price range</string>
    <string name="fragment_filter_ratingTitle">Sort by rating</string>
    <string name="fragment_filter_one_two_stars">1 - 2 Stars</string>
    <string name="fragment_filter_two_three_stars">2 - 3 Stars</string>
    <string name="fragment_filter_three_four_stars">3 - 4 Stars</string>
    <string name="fragment_filter_four_five_stars">4 - 5 Stars</string>
    <string name="fragment_filter_10_20_discount">10 - 20 %</string>
    <string name="fragment_filter_25_50_discount">25 - 50 %%</string>
    <string name="fragment_filter_50_70_discount">"50 - 70 %%"</string>
    <string name="fragment_filter_70_plus_discount">70%% above</string>
    <string name="fragment_filter_othersTitle">Sort by others</string>
    <string name="fragment_filter_discount">Discount</string>
    <string name="fragment_filter_freeShipping">Free shipping</string>
    <string name="fragment_filter_voucher">Voucher</string>
    <string name="fragment_filter_same_day">Same day delivery</string>
    <string name="fragment_filter_apply_filter">APPLY FILTER</string>
    <string name="fragment_filter_categories_error">Error fatching categories</string>
    <string name="fragment_product_reviews">%.1f(%d reviews)</string>
    <string name="fragment_product_free_delivery">Free delivery</string>
    <string name="fragment_product_related">Related product</string>
    <string name="fragment_product_add">Add to card</string>
    <string name="fragment_detail_share_title">share</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_order">Orders</string>
    <string name="navigation_title_cart">Cart</string>
    <string name="navigation_title_wishlist">Wishlist</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="fragment_cart_title">Shopping Cart</string>
    <string name="fragment_cart_billing_title">Billing Details</string>
    <string name="fragment_cart_item_total">Item Total</string>
    <string name="dash">-</string>
    <string name="fragment_cart_delivery_fee">Delivery fee</string>
    <string name="fragment_cart_tax">Taxes and Charge</string>
    <string name="fragment_order_delivery">Order Delivery</string>
    <string name="fragment_cart_promo_code">Promo Code</string>
    <string name="fragment_cart_checkout">Checkout</string>
    <string name="fragment_cart_apply">Apply</string>
    <string name="fragment_detail_cart_added">Item added to cart</string>
    <string name="fragment_cart_empty">Cart is empty</string>
    <string name="fragment_cart_discount">Promocode Discount</string>
    <string name="fragment_cart_billing_error">Error getting billing details</string>
    <string name="fragment_cart_order_error">Error creating order</string>
    <string name="fragment_cart_order_created">Your successfully created</string>
    <string name="fragment_orders_title">My orders</string>
    <string name="item_order_id">Order ID #%d</string>
    <string name="item_order_count">%d items</string>
    <string name="step_order_placed">Order Placed</string>
    <string name="step_confirmed">Order Confirmed</string>
    <string name="step_cancelled">Order Cancelled</string>
    <string name="step_delivering">Delivery Started</string>
    <string name="step_delivered">Order delivered</string>
    <string name="status_all">All</string>
    <string name="status_delivering">On Delivery</string>
    <string name="status_completed">Completed</string>
    <string name="status_canceled">Canceled</string>
    <string name="status_confirmed">Confirmed</string>
    <string name="status_placed">Placed</string>
    <string name="fragment_orders_empty">No orders</string>
    <string name="fragment_map_title">Track Order</string>
    <string name="bottom_sheet_driver_id">ID %d</string>
    <string name="fragment_map_error">Error fetching driver</string>
</resources>