<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    android:orientation="vertical"
    tools:context=".presintation.sign_in.Sign_In_Fragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/sign_in_background"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:src="@drawable/ic_lokmart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_sign_up_title"
        android:textColor="@color/dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/username_layout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="18dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/email_layout"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/soft_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:hint="@string/fragment_sign_in_username"
            android:inputType="text"
            android:textColor="@color/dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="18dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/password_layout"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/soft_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:hint="@string/fragment_sign_up_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="29dp"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/soft_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:hint="@string/fragment_sign_in_password"
            android:inputType="textPassword"
            android:textColor="@color/dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button_background"
        android:text="@string/fragmnet_sign_up_register"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/terms" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/register"
        app:layout_constraintEnd_toEndOf="@id/register"
        app:layout_constraintStart_toStartOf="@id/register"
        app:layout_constraintTop_toTopOf="@id/register"

        />

    <TextView
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="35dp"
        android:textColor="@color/soft_gray"
        android:text="@string/fragment_sign_up_terms_and_privacy"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_in_text"

        />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_sign_up_have_account"
        android:textColor="@color/soft_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_in"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="6dp"
        android:paddingVertical="8dp"
        android:text="@string/fragment_sign_up_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/sign_in_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sign_in_text" />


</androidx.constraintlayout.widget.ConstraintLayout>