<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/close"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="46dp"
        android:padding="6dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:text="Search"
        android:textColor="@color/dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/close"
        app:layout_constraintTop_toBottomOf="@id/close" />

    <include
        android:id="@+id/searchContainer"
        layout="@layout/view_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <TextView
        android:id="@+id/recentTitle"
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/fragment_search_recent"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/close"
        app:layout_constraintTop_toBottomOf="@id/searchContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
         style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/clear_all"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/recentTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recents"
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        app:layout_constraintHeight_max="128dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/recentTitle"
        tools:listitem="@layout/item_recent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/gray_1"
        app:layout_constraintTop_toBottomOf="@id/recents" />

    <TextView
        android:id="@+id/resultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:text="@string/fragment_search_result"
        android:textColor="@color/dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/close"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultTitle"
        tools:listitem="@layout/item_product_search" />

    <include
        android:id="@+id/loading"
        layout="@layout/view_loading" />

    <include
        android:id="@+id/error"
        layout="@layout/view_error" />
</androidx.constraintlayout.widget.ConstraintLayout>