<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="44dp"
                android:textColor="@color/dark"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/fragment_home_greeting" />

            <TextView
                android:id="@+id/goodMorning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_good_morning"
                android:textColor="@color/soft_gray"
                android:textSize="14sp"
                android:textStyle=""
                app:layout_constraintStart_toStartOf="@id/greeting"
                app:layout_constraintTop_toBottomOf="@id/greeting" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/avatarLayaout"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginEnd="32dp"
                android:elevation="0dp"
                app:cardCornerRadius="22dp"
                app:layout_constraintBottom_toBottomOf="@id/goodMorning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/greeting">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="@id/avatarLayaout"
                app:layout_constraintEnd_toStartOf="@id/avatarLayaout"
                app:layout_constraintTop_toTopOf="@id/avatarLayaout" />

            <TextView
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7dp"
                android:layout_marginEnd="-7dp"
                android:background="@drawable/count_background"
                android:paddingTop="2dp"
                android:scaleX="0.5"
                android:scaleY="0.5"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/notification"
                app:layout_constraintTop_toTopOf="@id/notification"
                tools:text="12" />


            <include
                android:id="@+id/searchContainer"
                layout="@layout/view_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                app:layout_constraintTop_toBottomOf="@id/goodMorning"

                />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/banners"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="23dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/searchContainer" />

            <com.zhpan.indicator.IndicatorView
                android:id="@+id/indecator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="42dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banners" />

            <TextView
                android:id="@+id/categoriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="39dp"
                android:text="@string/fragment_home_categories"
                android:textColor="@color/dark"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/indecator" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showAll"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableEnd="@drawable/ic_right"
                android:text="@string/show_all"
                android:textAllCaps="false"
                android:textColor="@color/orange"
                app:layout_constraintBaseline_toBaselineOf="@id/categoriesText"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/categoriesText"
                tools:layout_editor_absoluteX="-168dp"

                tools:listitem="@layout/item_category_home" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/categories"
                tools:listitem="@layout/item_section_vertical" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/loading"
        layout="@layout/view_loading" />

    <include
        android:id="@+id/error"
        layout="@layout/view_error" />
</androidx.constraintlayout.widget.ConstraintLayout>

